comple home page

--- a/FE/Admin/src/components/GlobalStyles/GlobalStyles.scss
+++ b/FE/Admin/src/components/GlobalStyles/GlobalStyles.scss
@@ -15,18 +15,21 @@
     --color-red-300: #FCA5A5;
 
     --color-primary-500: #0EA5E9;
+    --color-primary-400: #38BDF8;
     --color-primary-300: #7DD3FC;
     --color-primary-100: #E0F2FE;
 
     --color-gray-800: #1E293B;
+    --color-gray-600: #475569;
     --color-gray-500: #64748B;
     --color-gray-400: #94A3B8;
+    --color-gray-300: #CBD5E1;
     --color-gray-200: #E2E8F0;
     --color-gray-100: #F1F5F9;
 
-    --colors-green-600: #16A34A;
-    --colors-green-400: #4ADE80;
-    --colors-green-100: #DCFCE7;
+    --color-green-600: #16A34A;
+    --color-green-400: #4ADE80;
+    --color-green-100: #DCFCE7;
 
     --color-yellow-600: #CA8A04;
     --color-yellow-100: #FEF9C3;
@@ -55,4 +58,12 @@
 
 body {
     font-family: 'Nunito Sans', sans-serif;
+}
+
+button {
+    cursor: pointer;
+}
+
+li {
+    list-style: none;
 }
