--- a/FE/Admin/src/components/Button/Button.module.scss
+++ b/FE/Admin/src/components/Button/Button.module.scss
@@ -1,31 +1,29 @@
 .button {
-    display: inline-block;
+    display: flex;
+    align-items: center;
+    gap: 10px;
 
-    button {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        gap: 10px;
-        padding: 8px 16px;
-        background-color: transparent;
-        border: none;
-        border-radius: 4px;
-        
-        span {
-            color: var(--text-color-black);
-            font-size: var(--text-size-16);
-        }
+    span {
+        color: var(--text-color-black);
+        font-size: var(--text-size-16);
+        line-height: var(--text-height-16);
+    }
+}
 
+button {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+    padding: 8px 16px;
+    background-color: transparent;
+    border: none;
+    border-radius: 4px;
+    
+    span {
+        color: var(--text-color-black);
+        font-size: var(--text-size-16);
+        line-height: var(--text-height-16);
     }
 
-    div {
-        display: flex;
-        align-items: center;
-        gap: 10px;
-
-        span {
-            color: var(--text-color-black);
-            font-size: var(--text-size-16);
-        }
-    }
 }
