--- a/FE/Admin/src/components/Header/Header.module.scss
+++ b/FE/Admin/src/components/Header/Header.module.scss
@@ -1,4 +1,43 @@
 .header {
-    height: 45px;
     width: 100%;
+    display: flex;
+    align-items: center;
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    background-color: var(--text-color-white);
+
+    .logo {
+        width: calc(2/12 * 100%);
+        padding: 1rem 4rem;
+    }
+    .nav {
+        display: flex;
+        justify-content: space-between;
+        flex: 1;
+        padding: 1rem 4rem;
+
+        .search {
+            width: 25%;
+        }
+        .menu {
+            display: flex;
+            
+            gap: 1rem;
+    
+            .menu__notification {
+                display: flex;
+                align-items: center;
+            }
+            .menu__user {
+                span {
+                    font-size: var(--text-size-14);
+                    line-height: var(--text-height-14);
+                    font-weight: 600;
+                    color: var(--color-gray-600);
+                }
+            }
+        }
+    }
 }
