--- a/FE/Admin/src/components/Sidebar/Sidebar.module.scss
+++ b/FE/Admin/src/components/Sidebar/Sidebar.module.scss
@@ -1,10 +1,10 @@
 .container {
     position: fixed;
-    top: 45px;
+    top: 80px;
     left: 0;
     bottom: 0;
     width: calc(2/12 * 100%);
-    padding: 1.5rem 2rem 1.5rem 1.5rem;
+    padding: .5rem 2rem 1.5rem 1.5rem;
     display: flex;
     flex-direction: column;
     gap: 3rem;
@@ -50,7 +50,7 @@
             flex-direction: column;
             gap: 10px;
             visibility: visible;
-            margin-top: 0;
+            margin-top: 10px;
             opacity: 1;
             transition: all .3s ease-in;
 
