--- a/FE/Admin/src/layouts/DefaultLayout/DefaultLayout.module.scss
+++ b/FE/Admin/src/layouts/DefaultLayout/DefaultLayout.module.scss
@@ -7,4 +7,6 @@
     width: calc(10/12 * 100%);
     margin-left: calc(2/12 * 100%);
     background-color: var(--color-gray-100);
+    padding: 0 4rem;
+    margin-top: 80px;
 }
