--- a/FE/Admin/src/components/Button/Button.module.scss
+++ b/FE/Admin/src/components/Button/Button.module.scss
@@ -7,6 +7,7 @@
         color: var(--text-color-black);
         font-size: var(--text-size-16);
         line-height: var(--text-height-16);
+        font-family: 'Nunito Sans', sans-serif;
     }
 }
 
@@ -24,6 +25,7 @@ button {
         color: var(--text-color-black);
         font-size: var(--text-size-16);
         line-height: var(--text-height-16);
+        font-family: 'Nunito Sans', sans-serif;
     }
 
 }
