--- a/FE/Admin/src/components/ColumnChart/ColumnChart.module.scss
+++ b/FE/Admin/src/components/ColumnChart/ColumnChart.module.scss
@@ -1,5 +1,7 @@
 .column-chart {
     box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+    background-color: #FFF;
+    border-radius: 8px;
 
     .total-revenue {
         display: flex;
