--- a/FE/Admin/src/components/Button/Button.module.scss
+++ b/FE/Admin/src/components/Button/Button.module.scss
@@ -2,9 +2,10 @@
     display: flex;
     align-items: center;
     gap: 10px;
+    color: var(--color-gray-600);
 
     span {
-        color: var(--text-color-black);
+        color: var(--color-gray-600);
         font-size: var(--text-size-16);
         line-height: var(--text-height-16);
         font-family: 'Nunito Sans', sans-serif;
@@ -16,9 +17,9 @@ button {
     justify-content: center;
     align-items: center;
     gap: 10px;
-    padding: 8px 16px;
     background-color: transparent;
     border: none;
+    padding: 8px 16px;
     border-radius: 4px;
     
     span {
