--- a/FE/Admin/src/components/ColumnChart/ColumnChart.module.scss
+++ b/FE/Admin/src/components/ColumnChart/ColumnChart.module.scss
@@ -2,13 +2,14 @@
     box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
     background-color: #FFF;
     border-radius: 8px;
+    margin: 1rem 0;
 
     .total-revenue {
         display: flex;
         align-items: center;
         justify-content: space-between;
         flex-wrap: wrap;
-        margin: 2rem 4rem 2rem 4rem;
+        padding: 1rem 4rem;
 
         .total-revenue__content {
 
