--- a/FE/Admin/src/components/Header/Header.module.scss
+++ b/FE/Admin/src/components/Header/Header.module.scss
@@ -2,7 +2,6 @@
     width: 100%;
     display: flex;
     align-items: center;
-    position: fixed;
     top: 0;
     left: 0;
     right: 0;
@@ -21,6 +20,10 @@
 
         .search {
             width: 25%;
+
+            label {
+                left: 40px;
+            }
 
             input {
                 background-color: var(--color-gray-100);
