--- a/FE/Admin/src/components/Sidebar/Sidebar.module.scss
+++ b/FE/Admin/src/components/Sidebar/Sidebar.module.scss
@@ -1,5 +1,4 @@
 .container {
-    position: fixed;
     top: 80px;
     left: 0;
     bottom: 0;
@@ -9,6 +8,7 @@
     flex-direction: column;
     gap: 3rem;
     background-color: var(--color-gray-100);
+    height: 100%;
 
     .menu {
 
@@ -64,17 +64,14 @@
                 span {
                     margin-left: 10px;
                 }
-
-                :hover {
-                    color: var(--text-color-red);
-                }
+            }
+            .subMenu__item:hover {
+                color: var(--text-color-red);
             }
 
             .active {
-                span {
-                    color: var(--text-color-red);
-                    font-weight: 800;
-                }
+                color: var(--text-color-red);
+                font-weight: 800;
             }
         }
     }
