--- a/FE/Admin/src/layouts/DefaultLayout/DefaultLayout.module.scss
+++ b/FE/Admin/src/layouts/DefaultLayout/DefaultLayout.module.scss
@@ -1,12 +1,16 @@
-.main {
-    display: flex;
-    gap: 1rem;
-}
+.layout {
+    height: 100vh;
 
-.container {
-    width: calc(10/12 * 100%);
-    margin-left: calc(2/12 * 100%);
-    background-color: var(--color-gray-100);
-    padding: 0 4rem;
-    margin-top: 80px;
+    .main {
+        display: flex;
+        gap: 1rem;
+    }
+    
+    .container {
+        height: 100%;
+        overflow: auto;
+        width: calc(10/12 * 100%);
+        background-color: var(--color-gray-100);
+        padding: 0 4rem;
+    }
 }
