config getData from firebase and add image to firebase

--- a/FE/Admin/src/components/GlobalStyles/GlobalStyles.scss
+++ b/FE/Admin/src/components/GlobalStyles/GlobalStyles.scss
@@ -14,6 +14,7 @@
     --color-red-500: #EF4444;
     --color-red-300: #FCA5A5;
     --color-red-100: #FEE2E2;
+    --color-red-50: #FEF2F2;
 
     --color-primary-500: #0EA5E9;
     --color-primary-400: #38BDF8;
