--- a/FE/Admin/src/layouts/DefaultLayout/DefaultLayout.module.scss
+++ b/FE/Admin/src/layouts/DefaultLayout/DefaultLayout.module.scss
@@ -4,12 +4,14 @@
     .main {
         display: flex;
         gap: 1rem;
+        margin-top: 82.2px;
     }
     
     .container {
         height: 100%;
         overflow: auto;
-        width: calc(10/12 * 100%);
+        width: calc(10/12 * 100% - 1rem);
+        margin-left: calc(100% - 10/12 * 100% + 1rem);
         background-color: var(--color-gray-100);
         padding: 0 4rem;
     }
