--- a/FE/Admin/src/pages/Products/ProductAdd/ProductAdd.module.scss
+++ b/FE/Admin/src/pages/Products/ProductAdd/ProductAdd.module.scss
@@ -27,15 +27,28 @@
             width: 90%;
         }
     }
-    .branch p {
-        width: 12.8%;
+    .category {
+        padding: 10px 0;
+
+        p {
+            width: 13.2%;
+        }
+
+        .category__container {
+            display: flex;
+            gap: 1rem;
+
+            .input {
+                
+            }
+        }
     }
     .image {
         align-items: flex-start;
-        margin: 1rem 8px;
+        margin: 1rem 0;
 
         p {
-            width: 13%;
+            width: 13.2%;
         }        
     }
     .editor {
@@ -46,7 +59,7 @@
             width: 15.7%;
         }
     }
-    .size {
+    .checkbox {
         p {
             width: 13%;
         }
@@ -57,6 +70,10 @@
             flex-wrap: wrap;            
             gap: 1.5rem;
             
+            label {
+                width: 100px;
+            }
+
             span {
                 font-family: 'Nunito Sans', sans-serif;
                 font-size: var(--text-size-16);
@@ -65,6 +82,68 @@
         }
         .size-list span:last-child {
             color: var(--color-gray-500);
+        }
+    }
+    .btn-action {
+        display: flex;
+        gap: 2rem;
+    }
+    .btn-action button, .category button {
+        background-color: var(--text-color-red);
+        color: var(--text-color-white);
+        font-size: var(--text-size-14);
+        line-height: var(--text-height-14);
+        font-weight: 800;
+        padding: 8px 16px;
+        border-radius: 4px;
+        transition: 0.3s ease all;
+        z-index: 1;
+        position: relative;
+        
+        svg {
+            position: absolute;
+            visibility: hidden;
+            opacity: 0;
+            left: -2rem;
+            transition: all .3s ease-out;
+        }
+
+        span {
+            color: var(--text-color-white);
+            transition: all .3s ease-in;
+            cursor: pointer;
+        }
+
+        &:before {
+            transition: 0.5s all ease;
+            position: absolute;
+            top: 0;
+            left: 50%;
+            right: 50%;
+            bottom: 0;
+            opacity: 0;
+            content: '';
+            background-color: var(--color-red-50);
+            z-index: -1;
+        }
+        &:hover, &:focus {
+            box-shadow: 0 2px 2px var(--text-color-red), 0 2px 2px var(--text-color-red);
+
+            span {
+                transition: all .3s ease-out;
+                color: var(--text-color-red);
+                cursor: pointer;
+            }
+        }
+        &:hover:before, &:focus:before {
+            transition: 0.5s all ease;
+            left: 0;
+            right: 0;
+            opacity: 1;
+        }
+
+        &:active {
+            transform: scale(0.9);
         }
     }
 
