--- a/FE/Dashboard/src/containers/Products/Products.scss
+++ b/FE/Dashboard/src/containers/Products/Products.scss
@@ -1,3 +1,94 @@
 .products {
     font-size: 14px;
+
+    .active {
+        border: 2px solid #000000;
+    }
+
+    .products-overview {
+        display: flex;
+        flex-wrap: wrap;
+        gap: 2rem;
+        padding: 2rem 10%;
+
+        .products-image {
+            width: max-content;
+            position: relative;
+            
+            .products-image-list {
+                position: absolute;
+                top: 0;
+                left: -15%;
+                display: flex;
+                flex-direction: column;
+                gap: 1rem;
+    
+                .products-image-item {
+    
+                    img {
+                        max-width: 76px;
+                        max-height: 96px;
+                    }
+                }
+            }
+
+            img {
+                width: 100%;
+                max-width: 624px;
+            }
+        }
+        .products-attributes {
+            flex: 1;
+
+            .products-attributes-brand p {
+                font-size: var(--text-size-16);
+                line-height: var(--text-height-16);
+                font-weight: 600;
+                color: var(--text-color-black);
+                letter-spacing: 1px;
+            }
+            .products-attributes-name p {
+                color: #000;
+                font-size: 48px;
+                font-style: normal;
+                font-weight: 500;
+                line-height: 56px;
+            }
+            .products-attributes-select {
+                margin: 1rem 0;
+
+                p {
+                    color: #000;
+                    text-transform: uppercase;
+                    font-weight: 400;
+                }
+            }
+            .attributes-select {
+                display: flex;
+                align-items: center;
+                flex-wrap: wrap;
+                gap: 1rem;
+                padding: 10px 0;
+                width: calc(50px * 4 + 1rem * 4);
+
+                a {
+                    color: #0F6DB1;
+                    font-size: 14px;
+                    font-weight: 400;
+                    text-decoration-line: underline;
+
+                    &:hover {
+                        color: #000;
+                    }
+                }
+            }
+            .btn-size {
+                color: #828282;
+                text-align: center;
+                font-size: 14px;
+                font-weight: 400;
+                text-transform: uppercase;
+            }
+        }
+    }
 }
