add page account new

--- a/FE/Dashboard/src/components/Tab/Tab.scss
+++ b/FE/Dashboard/src/components/Tab/Tab.scss
@@ -3,7 +3,7 @@
     gap: 6px;
 
     span {
-        color: var(--gray-1, #828282);
+        color: #828282;
         font-size: 14px;
         font-weight: 400;
         line-height: 68px;
