--- a/FE/Dashboard/src/containers/Products/Products.scss
+++ b/FE/Dashboard/src/containers/Products/Products.scss
@@ -134,8 +134,12 @@
                     }
                 }
             }
+            .wrapper-btn {
+                padding: 3px;
+                display: flex;
+            }
             .btn-color, .btn-size {
-                border-width: 1px;
+                border: 1px solid #C4C4C4;
             }
             .btn-size {
                 color: #828282;
@@ -146,7 +150,7 @@
                 font-family: 'Oswald', sans-serif;
             }
             .active {
-                border-width: 3px;
+                border: 2px solid #000;
                 font-weight: 600;
                 color: #000;
                 opacity: 0.8;
