--- a/FE/Admin/src/components/GlobalStyles/GlobalStyles.scss
+++ b/FE/Admin/src/components/GlobalStyles/GlobalStyles.scss
@@ -73,3 +73,64 @@ li {
 a {
     text-decoration: none;
 }
+
+.modal-title-detail {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    gap: 3rem;
+
+    h3 {
+        font-family: 'Nunito Sans', sans-serif;
+        font-size: var(--text-size-24);
+        line-height: var(--text-height-24);
+        color: var(--color-gray-500);
+        font-weight: 400;
+    }
+
+    .modal-btn-add {
+        background-color: var(--text-color-red);
+        padding: 8px 16px;
+        border-radius: 4px;
+        position: relative;
+        transition: 0.3s ease all;
+        z-index: 1;
+    
+        span {
+            color: var(--text-color-white);
+            font-size: var(--text-size-14);
+            line-height: var(--text-height-14);
+            font-weight: 800;
+        }
+    
+        &:before {
+            transition: 0.5s all ease;
+            position: absolute;
+            top: 0;
+            left: 50%;
+            right: 50%;
+            bottom: 0;
+            opacity: 0;
+            content: '';
+            background-color: var(--color-red-50);
+            z-index: -1;
+        }
+        &:hover, &:focus {
+            box-shadow: 0 2px 2px var(--text-color-red), 0 2px 2px var(--text-color-red);
+    
+            span {
+                color: var(--text-color-red);
+            }
+        }
+        &:hover:before, &:focus:before {
+            transition: 0.5s all ease;
+            left: 0;
+            right: 0;
+            opacity: 1;
+        }
+    
+        &:active {
+            transform: scale(0.9);
+        }
+    }
+}
