--- a/FE/Dashboard/src/containers/Cart/Cart.scss
+++ b/FE/Dashboard/src/containers/Cart/Cart.scss
@@ -51,6 +51,11 @@
                         padding-left: 3rem;
                     }
 
+                    img {
+                        max-width: 84px;
+                        max-height: 104px;
+                    }
+
                     p {
                         margin: 0;
                         font-size: 18px;
