--- a/FE/Dashboard/src/containers/Payment/Payment.scss
+++ b/FE/Dashboard/src/containers/Payment/Payment.scss
@@ -258,6 +258,11 @@
                 justify-content: space-between;
                 gap: 1rem;
 
+                img {
+                    max-width: 84px;
+                    max-height: 104px;
+                }
+
                 .gap-1 {
                     gap: 10px;
                 }
