update code add product detail

--- a/FE/Admin/src/pages/Products/ProductAdd/ProductAdd.module.scss
+++ b/FE/Admin/src/pages/Products/ProductAdd/ProductAdd.module.scss
@@ -132,6 +132,8 @@
         transition: 0.3s ease all;
         z-index: 1;
         position: relative;
+        width: 15%;
+        min-width: 100px;
         
         svg {
             position: absolute;
