fix: api, UI product, UI payment, add page payment success

--- a/FE/Dashboard/src/containers/Products/Products.scss
+++ b/FE/Dashboard/src/containers/Products/Products.scss
@@ -32,10 +32,13 @@
                 overflow: hidden;
                 position: relative;
 
-                > img {
-                    display: block;
+                .product-slider-index {
                     width: 624px;
                     max-width: 624px;
+                }
+
+                > img {
+                    display: block;
                     height: auto;
                     transition: all 0.3s;
                     transform: scale(1);
