--- a/FE/Dashboard/src/containers/Payment/Payment.scss
+++ b/FE/Dashboard/src/containers/Payment/Payment.scss
@@ -105,6 +105,7 @@
                 &:hover {
                     background-color: #EB5757;
                     border: none;
+                    opacity: 1;
                     
                     p {
                         color: #FFF;
@@ -166,6 +167,35 @@
                     text-transform: uppercase;
                     cursor: pointer;
                     z-index: 10;
+                }
+            }
+        }
+        .payment-radio-group {
+            user-select: none;
+
+            p {
+                font-size: 18px;
+                font-weight: 500;
+                line-height: 24px;
+            }
+            label {
+                display: flex;
+                cursor: pointer;
+                font-weight: 500;
+                margin: 1.2rem 0;
+                color: #828282;
+
+                span {
+                    margin-left: 0.5rem;
+                    font-size: 14px;
+                    font-weight: 400;
+                    line-height: 20px;
+                }
+            }
+            .checked {
+                
+                span {
+                    color: #000000;
                 }
             }
         }
